secondfile/objects/Network_Management__c.object
<CustomObject>
    <fields>
        <fullName>AVPN_Customer_Name__c</fullName>
        <label>AVPN Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVPN_Network_Name__c</fullName>
        <label>AVPN Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVPN_Order_Number__c</fullName>
        <label>AVPN Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_name__c</fullName>
        <label>Alternate Contact name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Address__c</fullName>
        <label>Alternate Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Number_Mobile__c</fullName>
        <label>Alternate Phone Number-Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Number_Office__c</fullName>
        <label>Alternate Phone Number-Office</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNT_Customer_Name__c</fullName>
        <label>PNT Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNT_Network_Name__c</fullName>
        <label>PNT Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNT_Order_Number__c</fullName>
        <label>PNT Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Mobile__c</fullName>
        <label>Phone Number-Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Office__c</fullName>
        <label>Phone Number-Office</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_code__c</fullName>
        <label>ZIP code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Network Management</label>
    <nameField>
        <label>Network Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Network Managements</pluralLabel>
    <recordTypes>
        <fullName>ICC</fullName>
        <active>true</active>
        <label>ICC</label>
    </recordTypes>
    <recordTypes>
        <fullName>SIO</fullName>
        <active>true</active>
        <label>SIO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>